# rust_sort

./: Cargo.toml  file.txt  index.html
.github/workflows/: rust.yml
src/: main.rs
